--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "dev": "vite",
     "build": "rimraf build/**/* && tsc && vite build && cpy ./README.md ./build/"
   },
+  "exports": {
+    ".": {
+      "umd": "./index.umd.js",
+      "types": "./index.d.ts",
+      "import": "./index.js",
+      "require": "./index.cjs"
+    }
+  },
   "devDependencies": {
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.11",
