--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "rimraf build/**/* && tsc && vite build && cpy ./README.md ./build/"
+    "build": "rimraf build/**/* && tsc && vite build && cpy ./package.json ./build/ && cpy ./README.md ./build/"
   },
   "exports": {
     ".": {
@@ -16,7 +16,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
-    "@types/react": "^19.0.11",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "cpy-cli": "^5.0.0",
@@ -28,6 +29,7 @@
   "dependencies": {
     "marked-react": "^3.0.0",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rxjs": "^7.8.2",
     "styled-components": "^6.1.16"
   }
