--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ux-guide-themes",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "rimraf build/**/* && tsc && vite build && cpy ./package.json ./build/ && cpy ./README.md ./build/"
+    "build": "vite build"
   },
   "exports": {
     ".": {
@@ -14,23 +14,23 @@
       "require": "./index.cjs"
     }
   },
+  "peerDependencies": {
+    "@types/react": "^19.0.10",
+    "marked-react": "^3.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "rxjs": "^7.8.2",
+    "styled-components": "^6.1.16"
+  },
   "devDependencies": {
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
-    "cpy-cli": "^5.0.0",
-    "rimraf": "^6.0.1",
     "typescript": "~5.7.2",
     "vite": "^6.2.2",
-    "vite-plugin-dts-bundle-generator": "^2.1.0"
-  },
-  "dependencies": {
-    "marked-react": "^3.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "rxjs": "^7.8.2",
-    "styled-components": "^6.1.16"
+    "vite-plugin-dts-bundle-generator": "^2.1.0",
+    "vite-plugin-static-copy": "^2.3.0"
   }
 }
