--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "forceConsistentCasingInFileNames": true,
     "types": ["vite/client", "node"],
     "jsx": "react",
+    "outDir": "build",
     "skipLibCheck": true
   },
   "include": ["src"],
